feat: cli parsing

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,4 @@ edition = "2021"
 [dependencies]
 object = {version = "0.36.3", features = ["write_core", "elf"]}
 regex = "1"
+clap = { version = "4.0", features = ["derive"] }
